# mind-meld-rust-2025-07

./: Cargo.toml  README.md
doc/: file-format.md
src/: app.rs  cli.rs  commit.rs  config.rs  dirs.rs  main.rs  program.rs  project.rs  render.rs  status.rs  store.rs  track.rs  untrack.rs
src/project/: types.rs
src/render/: fs.rs  store.rs  txt.rs
src/store/: git.rs
