[package]
name = "mind-meld"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
gix = { version = "0.72.1", default-features = false, features = ["basic"] }
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
