[package]
name = "mind-meld"
version = "0.1.0"
edition = "2024"
default-run = "mind-meld"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
gix = { version = "0.72.1", default-features = false, features = ["basic", "tree-editor"] }
notify = "8.1.0"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
toml = "0.8.23"
zip = "4.2.0"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4.7"
